--- a/views/signup.html
+++ b/views/signup.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/signup.css">
 <script src="js/xhrHandler.js"></script>
+<script src="js/signup.js"></script>
 
 </head>
 
