--- a/views/signup.html
+++ b/views/signup.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Sign Up</title>
+  <head>
+    <title>Sign Up</title>
 
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/signup.css">
-<script src="js/xhrHandler.js"></script>
-<script src="js/signup.js"></script>
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
+      <link rel="stylesheet" href="css/reset.css">
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/signup.css">
+      <script src="js/xhrHandler.js"></script>
+      <script src="js/signup.js"></script>
 
-</head>
+  </head>
 
 <body>
 
@@ -39,11 +39,11 @@
           <p id="create user" onClick="Submit()">Create User</p>
         </div>
 
-      </form>
+    </form>
 
       <p><h3><a href="#">Already have an account?</a></h3></p>
 
-  </div>
+</div>
 
 
 <footer>
@@ -53,3 +53,4 @@
 </footer>
 
 </body>
+</html>
