start signup css
styling form width, background color

--- a/css/comp/signup.css
+++ b/css/comp/signup.css
@@ -1,5 +1,22 @@
-.signup {
-  background-color:#DCE0D9;
-  color: #BC261D;
-  
+#signup {
+  width: 20%;
+  height: 90%;
+  margin-left: 40%;
+  background: #DCE0D9;
+}
+form {
+
+  position:
+}
+
+form input {
+    font-size:
+    color:
+    background-color:
+
+}
+
+p h3 a {
+      color:#BC261D;
+
 }
