--- a/views/signup.html
+++ b/views/signup.html
@@ -4,9 +4,11 @@
     <title>Sign Up</title>
 
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
-      <link rel="stylesheet" href="css/reset.css">
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="css/signup.css">
+      <link rel="stylesheet" href="../css/reset.css">
+      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../css/signup.css">
+
+
       <script src="js/xhrHandler.js"></script>
       <script src="js/signup.js"></script>
 
