--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
 
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="../css/reset.css">
-      <link rel="stylesheet" href="..css/style.css">
+      <link rel="stylesheet" href="../css/style.css">
       <link rel="stylesheet" href="../css/login.css">
       <script src="../js/xhrHandler.js"></script>
       <script src="../js/components/login.js"></script>
@@ -28,7 +28,7 @@
 
     </form>
 
-      <p><h3><a href="#">Already have an account?</a></h3></p>
+      <p><h3><a href="#">Don't have an account?</a></h3></p>
 
     </div>
 
@@ -46,7 +46,7 @@
 
     </form>
 
-      <p><h3><a href="#">Already have an account?</a></h3></p>
+
 
 </div>
 
