--- a/css/base/base.css
+++ b/css/base/base.css
@@ -64,11 +64,11 @@ body {
    }
 
    a:link,a:visited{
-    color:#DCE0D9;
+    color:#BC261D;
   }
 
   a:hover{
-    color:#FFFFFF;
+    color:#851513;
   }
 
   p{
