--- a/css/comp/index.css
+++ b/css/comp/index.css
@@ -1,14 +1,3 @@
-header {
-  background-color:#DCE0D9;
-  width: 100%;
-
-  padding-top:0px;
-  padding-bottom:0px;
-  padding: 0px;
-  margin: 0px;
-  z-index: 1;
-}
-
 #banner {
   background-color: #FFFFFF;
   padding-top: 30px;
@@ -23,7 +12,7 @@ h4 {
   font-weight:100;
 }
 
-footer {
+footer #index {
   background-color: #FFFFFF;
   color: black;
 }
