sign.up css styling

--- a/views/signup.html
+++ b/views/signup.html
@@ -20,7 +20,7 @@
     <h1>Startup Matchmaker</h1>
 </header>
 
-<div id="signup">
+<div id="form">
     <div id="avatar">
 
     <img src="img/default.jpg">
