--- a/css/comp/signup.css
+++ b/css/comp/signup.css
@@ -1,19 +1,18 @@
-#signup {
+body, html {
+
+}
+
+#form {
   width: 20%;
   height: 90%;
   margin-left: 40%;
   background: #DCE0D9;
-}
-form {
-
-  position:
+  padding: 15px;
 }
 
 form input {
-    font-size:
-    color:
-    background-color:
-
+    width: 100%;
+    font-size:24px;
 }
 
 p h3 a {
