--- a/views/login.html
+++ b/views/login.html
@@ -31,7 +31,11 @@
           <p id="login" onClick="Submit()">login</p>
       </div>
 
-      <p><h2><a href="#">Don't have an account?</a></h2></p>
+      <button type="button" onclick="Submit()">login</button>
+
+
+
+      <p><h2><a href="#">Don't have an account?</a></h></p>
 
     </form>
     </div>
