styling form id on signup page
Added Avatar default picture ( to resize image and format)
changed id selector to ‘form’ on login and signup.

formated input boxes.

base.css is overriding font styling on signup.css page for links and
buttons

--- a/css/comp/signup.css
+++ b/css/comp/signup.css
@@ -1,6 +1,17 @@
 body, html {
 
 }
+#avatar {
+    image border-radius: 50px;
+
+}
+
+#choose file {
+  width: 100%;
+  color: black;
+  background-color: #DCE0D9;
+
+}
 
 #form {
   width: 20%;
@@ -12,10 +23,22 @@ body, html {
 
 form input {
     width: 100%;
-    font-size:24px;
+    font-size:20px;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.create user {
+    background-color: #BC261D;
+    width: 100%;
+    font-size: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
 }
 
 p h3 a {
-      color:#BC261D;
-
+  color:#BC261D;
+  text-decoration: none;
 }
