--- a/views/signup.html
+++ b/views/signup.html
@@ -23,7 +23,12 @@
 <div id="form">
     <div id="avatar">
 
-    <img src="img/default.jpg">
+    <img src= "/img/no-avatar.jpg"
+        class="align-center small"/>
+
+    <div>
+      <p id="choose file" onClick="Submit()">Choose File</p>
+    </div>
 
     </div>
 
