--- a/views/signup.html
+++ b/views/signup.html
@@ -23,11 +23,10 @@
 <div id="form">
     <div id="avatar">
 
-    <img src= "/img/no-avatar.jpg"
-        class="align-center small"/>
+    <img src= "/img/no-avatar.jpg">
 
     <div>
-      <p id="choose file" onClick="Submit()">Choose File</p>
+      <p id="choosefile" onClick="Submit()">Choose File</p>
     </div>
 
     </div>
@@ -43,7 +42,7 @@
       </div>
 
         <div>
-          <p id="create user" onClick="Submit()">Create User</p>
+          <p id="createuser" onClick="Submit()">Create User</p>
         </div>
 
     </form>
