--- a/css/comp/index.css
+++ b/css/comp/index.css
@@ -1,18 +1,110 @@
+
+a:link,a:visited {
+  color: #DCE0D9;
+  text-align: center;
+}
+
+.matchbutton {
+  background-color: #BC261D;
+  border-radius: 5px;
+  padding: 4px 30px 4px 30px;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+matchbutton {
+  display: inline;
+  width: 20%;
+
+  position: relative;
+  background-color: #BC261D;
+  border-radius: 5px;
+  margin: 0px 20px 20px 20px;
+}
+
+.button {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+  background-color: #BC261D;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+
+.match {
+  width: 30%;
+  margin-top: 0px;
+  margin-right: 50px;
+  margin-bottom: 50px;
+  float: right;
+}
+
+.match p {
+  margin-bottom: 20px;
+}
+
+.match h2 {
+  margin-top: 25px;
+}
+
+
 #banner {
   background-color: #FFFFFF;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  width: 100%;
+  padding: 30px 0px 30px 0px;
+  margin-top: 300px;
+
 }
 
-h4 {
+#banner h1 {
   color: black;
   font-size: 32px;
-  text-align: center;
-  font-family: 'Open Sans', Arial, sans-serif;
   font-weight:100;
+  text-align: center;
 }
 
-footer #index {
-  background-color: #FFFFFF;
+#bottom {
+  margin-bottom: 20px;
+}
+
+.profile {
+  width: 25%;
+  margin-top: 25px;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 50px;
+  float: left;
+}
+
+.search {
+  width: 25%;
+  margin-top: 25px;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 50px;
+  float:left;
+}
+
+.designer {
+  width: 25%;
+  margin-top: 25px;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 50px;
+  float:right;
+}
+
+
+footer {
+  margin-top: 100px;
+  
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+}
+
+#copyright {
   color: black;
 }
