--- a/css/comp/index.css
+++ b/css/comp/index.css
@@ -20,6 +20,7 @@ matchbutton {
   background-color: #BC261D;
   border-radius: 5px;
   margin: 0px 20px 20px 20px;
+
 }
 
 .button {
@@ -32,10 +33,9 @@ matchbutton {
   margin-top: 20px;
 }
 
-
 .match {
   width: 30%;
-  margin-top: 0px;
+  margin-top: 25px;
   margin-right: 50px;
   margin-bottom: 50px;
   float: right;
@@ -45,16 +45,11 @@ matchbutton {
   margin-bottom: 20px;
 }
 
-.match h2 {
-  margin-top: 25px;
-}
-
-
 #banner {
   background-color: #FFFFFF;
   width: 100%;
-  padding: 30px 0px 30px 0px;
-  margin-top: 300px;
+  padding: 25px 0px 25px 0px;
+  margin-top: 325px;
 
 }
 
@@ -65,13 +60,18 @@ matchbutton {
   text-align: center;
 }
 
-#bottom {
-  margin-bottom: 20px;
+#bottom  p {
+  margin-bottom: 15px;
+}
+
+#bottom h2 {
+  font-size: 20px;
+  line-height: 2;
 }
 
 .profile {
   width: 25%;
-  margin-top: 25px;
+  margin-top: 50px;
   margin-left: 50px;
   margin-right: 50px;
   margin-bottom: 50px;
@@ -80,7 +80,7 @@ matchbutton {
 
 .search {
   width: 25%;
-  margin-top: 25px;
+  margin-top: 50px;
   margin-left: 50px;
   margin-right: 50px;
   margin-bottom: 50px;
@@ -89,7 +89,7 @@ matchbutton {
 
 .designer {
   width: 25%;
-  margin-top: 25px;
+  margin-top: 50px;
   margin-left: 50px;
   margin-right: 50px;
   margin-bottom: 50px;
@@ -98,10 +98,8 @@ matchbutton {
 
 
 footer {
-  margin-top: 100px;
-  
-  bottom: 0;
   width: 100%;
+  margin-top: 280px;
   background-color: white;
 }
 
