Commits for login css & html

--- a/css/comp/login.css
+++ b/css/comp/login.css
@@ -1,7 +1,15 @@
-#login {
+/*#login {
   width: 20%;
   height: 90%;
   margin-left: 40%;
-  background: #DCE0D9;
+  background: #DCE0D9; /*
 
-};
+}
+
+.btn {
+    color: red;
+    font: black;
+
+
+
+}
