--- a/views/login.html
+++ b/views/login.html
@@ -31,11 +31,13 @@
           <p id="login" onClick="Submit()">login</p>
       </div>
 
-      <button type="button" onclick="Submit()">login</button>
+    
+
+      <button type="button" class="btn">login</button>
 
 
 
-      <p><h2><a href="#">Don't have an account?</a></h></p>
+      <p><h2><a href="#">Don't have an account?</a></h2></p>
 
     </form>
     </div>
